@@ -1,11 +1,8 @@
 package mgua;
 
 import javafx.application.Application;
-import javafx.geometry.Insets;
 import javafx.scene.Scene;
 import javafx.scene.chart.*;
-import javafx.scene.control.Label;
-import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 
 import java.io.BufferedReader;
@@ -13,189 +10,144 @@ import java.io.FileReader;
 import java.util.ArrayList;
 import java.util.List;
 
-/**
- * PlotResults — JavaFX-додаток для відображення результатів МГУА.
- *
- * Читає файл RESULTS_MPI.txt (створений GMDHParallel після MPI-запуску)
- * і малює два графіки:
- *   1. Реальні vs модельні значення y (лінійний графік).
- *   2. Scatter plot (реальні по X, модельні по Y) — ідеальна модель = діагональ.
- *
- * Запуск:
- *   - Після того як ./run_mpi.sh завершився і RESULTS_MPI.txt створено,
- *     запусти PlotResults напряму з IntelliJ (звичайний Run).
- *   - Або через термінал (потрібен JavaFX у classpath):
- *       java --module-path /Users/dasha/javafx-sdk-21.0.11/lib \
- *            --add-modules javafx.controls \
- *            -cp out mgua.PlotResults
- */
 public class PlotResults extends Application {
 
-    // Шлях до файлу результатів (відносно кореня проєкту)
-    private static final String RESULTS_FILE = "RESULTS_MPI.txt";
-
-    // -------------------------------------------------------------------------
-    // Точка входу
-    // -------------------------------------------------------------------------
+    private static final String FILE = "RESULTS_MPI.txt";
 
     public static void main(String[] args) {
         launch(args);
     }
 
     @Override
-    public void start(Stage stage) throws Exception {
+    public void start(Stage stage) {
 
-        // --- Читаємо дані з файлу ---
-        ParsedResults data = parseResultsFile(RESULTS_FILE);
+        Data d = read(FILE);
 
-        if (data.real.isEmpty()) {
-            showError(stage, "Файл " + RESULTS_FILE + " не містить секції --- POINTS ---.\n"
-                    + "Спочатку запусти: ./run_mpi.sh");
+        if (d.x.isEmpty()) {
+            System.out.println("Немає даних для графіка");
             return;
         }
 
-        int n = data.real.size();
+        // =========================
+        // 📏 МАСШТАБ (щоб не було зжаття)
+        // =========================
+        double minX = d.x.stream().mapToDouble(v -> v).min().orElse(0);
+        double maxX = d.x.stream().mapToDouble(v -> v).max().orElse(1);
 
-        // =====================================================================
-        // Графік 1 — Лінійний: реальні vs модельні по індексу спостереження
-        // =====================================================================
-        NumberAxis xAxis1 = new NumberAxis(0, n, Math.max(1, n / 10));
-        xAxis1.setLabel("Спостереження (індекс)");
-        NumberAxis yAxis1 = new NumberAxis();
-        yAxis1.setLabel(data.yName + " (нормалізовано)");
+        double minY = Math.min(
+                d.real.stream().mapToDouble(v -> v).min().orElse(0),
+                d.model.stream().mapToDouble(v -> v).min().orElse(0)
+        );
 
-        LineChart<Number, Number> lineChart = new LineChart<>(xAxis1, yAxis1);
-        lineChart.setTitle("МГУА: реальні vs модельні значення");
-        lineChart.setCreateSymbols(false);   // без кружечків — швидше при n=2000
-        lineChart.setAnimated(false);
+        double maxY = Math.max(
+                d.real.stream().mapToDouble(v -> v).max().orElse(1),
+                d.model.stream().mapToDouble(v -> v).max().orElse(1)
+        );
 
-        XYChart.Series<Number, Number> realSeries  = new XYChart.Series<>();
-        XYChart.Series<Number, Number> modelSeries = new XYChart.Series<>();
-        realSeries.setName("Реальні (" + data.yName + ")");
-        modelSeries.setName("Модель МГУА");
+        double padX = (maxX - minX) * 0.1;
+        double padY = (maxY - minY) * 0.1;
 
-        for (int i = 0; i < n; i++) {
-            realSeries.getData().add(new XYChart.Data<>(i, data.real.get(i)));
-            modelSeries.getData().add(new XYChart.Data<>(i, data.model.get(i)));
+        NumberAxis xAxis = new NumberAxis(minX - padX, maxX + padX, (maxX - minX) / 10);
+        NumberAxis yAxis = new NumberAxis(minY - padY, maxY + padY, (maxY - minY) / 10);
+
+        xAxis.setLabel("X");
+        yAxis.setLabel("Y");
+
+        // =========================
+        // 📈 ГРАФІК
+        // =========================
+        LineChart<Number, Number> chart = new LineChart<>(xAxis, yAxis);
+        chart.setTitle("Model");
+
+        chart.setCreateSymbols(true);
+        chart.setAnimated(false);
+        chart.setHorizontalGridLinesVisible(true);
+        chart.setVerticalGridLinesVisible(true);
+
+        // --- Серії ---
+        XYChart.Series<Number, Number> real = new XYChart.Series<>();
+        real.setName("Input XY");
+
+        XYChart.Series<Number, Number> model = new XYChart.Series<>();
+        model.setName("Model XY");
+
+        for (int i = 0; i < d.x.size(); i++) {
+            real.getData().add(new XYChart.Data<>(d.x.get(i), d.real.get(i)));
+            model.getData().add(new XYChart.Data<>(d.x.get(i), d.model.get(i)));
         }
-        lineChart.getData().addAll(realSeries, modelSeries);
-        lineChart.setPrefHeight(350);
 
-        // =====================================================================
-        // Графік 2 — Scatter: реальні (X) vs модельні (Y)
-        //   Ідеальна модель = точки лежать на діагоналі y=x
-        // =====================================================================
-        NumberAxis xAxis2 = new NumberAxis();
-        xAxis2.setLabel("Реальні значення");
-        NumberAxis yAxis2 = new NumberAxis();
-        yAxis2.setLabel("Модельні значення");
+        chart.getData().addAll(real, model);
 
-        ScatterChart<Number, Number> scatter = new ScatterChart<>(xAxis2, yAxis2);
-        scatter.setTitle("Scatter: реальні vs модельні (ідеал — діагональ)");
-        scatter.setAnimated(false);
+        // =========================
+        // 🎨 СТИЛЬ (гарний вигляд)
+        // =========================
+        chart.setPrefSize(1100, 700);
 
-        XYChart.Series<Number, Number> scatterSeries = new XYChart.Series<>();
-        scatterSeries.setName("Спостереження");
-        for (int i = 0; i < n; i++) {
-            scatterSeries.getData().add(
-                    new XYChart.Data<>(data.real.get(i), data.model.get(i)));
-        }
+        Scene scene = new Scene(chart, 1100, 700);
 
-        // Діагональ y=x для орієнтиру
-        XYChart.Series<Number, Number> diagSeries = new XYChart.Series<>();
-        diagSeries.setName("Ідеальна модель (y=x)");
-        double minVal = data.real.stream().mapToDouble(Double::doubleValue).min().orElse(0);
-        double maxVal = data.real.stream().mapToDouble(Double::doubleValue).max().orElse(1);
-        diagSeries.getData().add(new XYChart.Data<>(minVal, minVal));
-        diagSeries.getData().add(new XYChart.Data<>(maxVal, maxVal));
-
-        scatter.getData().addAll(scatterSeries, diagSeries);
-        scatter.setPrefHeight(350);
-
-        // =====================================================================
-        // Мітка з формулою та критерієм
-        // =====================================================================
-        Label infoLabel = new Label(data.formula + "\n" + data.criterion);
-        infoLabel.setStyle("-fx-font-family: monospace; -fx-font-size: 12px; "
-                + "-fx-padding: 8px; -fx-background-color: #f4f4f4; "
-                + "-fx-border-color: #cccccc; -fx-border-radius: 4;");
-
-        // =====================================================================
-        // Компонування
-        // =====================================================================
-        VBox root = new VBox(10, infoLabel, lineChart, scatter);
-        root.setPadding(new Insets(12));
-
-        Scene scene = new Scene(root, 900, 820);
-        stage.setTitle("Результати МГУА — " + data.yName);
+        stage.setTitle("Model");
         stage.setScene(scene);
         stage.show();
+
+        // фон
+        chart.lookup(".chart-plot-background")
+                .setStyle("-fx-background-color: #f5f5f5;");
+
+        // товсті лінії
+        real.getNode().setStyle("-fx-stroke-width: 3px;");
+        model.getNode().setStyle("-fx-stroke-width: 3px;");
     }
 
-    // -------------------------------------------------------------------------
-    // Парсинг RESULTS_MPI.txt
-    // -------------------------------------------------------------------------
-
-    private static class ParsedResults {
-        String yName    = "y";
-        String formula  = "";
-        String criterion = "";
-        List<Double> real  = new ArrayList<>();
+    // =========================
+    // 📦 DATA
+    // =========================
+    static class Data {
+        List<Double> x = new ArrayList<>();
+        List<Double> real = new ArrayList<>();
         List<Double> model = new ArrayList<>();
     }
 
-    private static ParsedResults parseResultsFile(String path) {
-        ParsedResults r = new ParsedResults();
-        boolean inPoints = false;
+    // =========================
+    // 📂 FILE PARSER
+    // =========================
+    private static Data read(String path) {
+
+        Data d = new Data();
+        boolean points = false;
 
         try (BufferedReader br = new BufferedReader(new FileReader(path))) {
+
             String line;
+
             while ((line = br.readLine()) != null) {
+
                 line = line.trim();
 
-                // Секція POINTS починається після "--- POINTS ---"
                 if (line.equals("--- POINTS ---")) {
-                    inPoints = true;
+                    points = true;
                     continue;
                 }
 
-                if (inPoints) {
-                    if (line.startsWith("Y_NAME ")) {
-                        r.yName = line.substring(7).trim();
-                    } else if (line.startsWith("POINT ")) {
-                        // POINT <idx> <real> <model>
-                        String[] parts = line.split("\\s+");
-                        if (parts.length >= 4) {
-                            r.real.add(Double.parseDouble(parts[2]));
-                            r.model.add(Double.parseDouble(parts[3]));
-                        }
-                    }
-                } else {
-                    // Збираємо формулу та критерій з верхньої частини файлу
-                    if (line.startsWith("f(x)") || line.startsWith(" f(x)")) {
-                        r.formula = line.trim();
-                    }
-                    if (line.startsWith("Criterion") || line.startsWith(" Criterion")) {
-                        r.criterion = line.trim();
-                    }
+                if (points && line.startsWith("POINT")) {
+
+                    // FORMAT:
+                    // POINT idx X real model
+                    String[] p = line.split("\\s+");
+
+                    double x = Double.parseDouble(p[2]);
+                    double real = Double.parseDouble(p[3]);
+                    double model = Double.parseDouble(p[4]);
+
+                    d.x.add(x);
+                    d.real.add(real);
+                    d.model.add(model);
                 }
             }
+
         } catch (Exception e) {
-            System.err.println("[PlotResults] Не вдалось прочитати " + path + ": " + e.getMessage());
+            System.out.println("Помилка читання: " + e.getMessage());
         }
-        return r;
-    }
 
-    // -------------------------------------------------------------------------
-    // Помилка — показати у вікні
-    // -------------------------------------------------------------------------
-
-    private static void showError(Stage stage, String msg) {
-        Label lbl = new Label(msg);
-        lbl.setStyle("-fx-font-size: 14px; -fx-text-fill: red; -fx-padding: 20px;");
-        Scene scene = new Scene(new VBox(lbl), 500, 120);
-        stage.setTitle("PlotResults — Помилка");
-        stage.setScene(scene);
-        stage.show();
+        return d;
     }
 }
